# experiments-python

./: CMakeLists.txt  README.md  averager.py  averager_gui.py  mainwin.py  pyside.pyproj  pyside.sln
cesium/: averager_gui.py  averager_math.py
dynload/: createinstance.py  dumpobj.py  importpyside6.py  setprop.py
dynload/GUI/: Button.py  Container.py  Element.py  Label.py  Window.py
dynload/Graphics/: Base.py
dynload/Graphics/GUI/: Camera.py
dynload/Graphics/Nodes/: Group.py  Node.py  Transform.py
dynload/database/: Class.py  Database.py  Module.py
inspection/: ClassInfo.py  importpyside6.py
pyside/: mainwin.py  pyside.pyproj  pyside.sln  simconfig.ui
pyside/averager/: averager.py  averager.pyproj
pyside/averager/cesium/: cesium.pyproj
pyside/commandgui/: commandgui.py  commandgui.ui  gui.py
swig/: CMakeLists.txt
swig/modules/: CMakeLists.txt
swig/modules/stats/: CMakeLists.txt  stats-test.py  stats.i
swig/stats/: CMakeLists.txt  Stats.cpp  Stats.hpp
